--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,11 @@
             <artifactId>annotations-java5</artifactId>
             <version>RELEASE</version>
         </dependency>
-        
+        <dependency>
+		    <groupId>org.hdrhistogram</groupId>
+		    <artifactId>HdrHistogram</artifactId>
+		    <version>2.1.11</version>
+		</dependency>
         <!-- Spring security 
         <dependency>
         	<groupId>org.springframework.boot</groupId>
