--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,16 @@
 		    <artifactId>HdrHistogram</artifactId>
 		    <version>2.1.11</version>
 		</dependency>
+		 <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.32</version>
+		</dependency>
         <!-- Spring security 
         <dependency>
         	<groupId>org.springframework.boot</groupId>
