--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,17 @@ spring:
   profiles: local
   application:
     name: dashboard-reservation
+  redis:
+    database: 1
+    host: 112.126.99.2
+    port: 31379
+    lettuce:
+      shutdown-timeout: 100ms
+      pool:
+        min-idle: 5
+        max-idle: 10
+        max-active: 8
+        max-wait: 10ms
 server:
   port: 20002
   servlet:
@@ -65,6 +76,17 @@ spring:
   profiles: k8s
   application:
     name: dashboard-reservation
+  redis:
+    database: 1
+    host: 112.126.99.2
+    port: 31379
+    lettuce:
+      shutdown-timeout: 100ms
+      pool:
+        min-idle: 5
+        max-idle: 10
+        max-active: 8
+        max-wait: 10ms
 server:
   port: 20002
   servlet:
