--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,12 @@
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.3.RELEASE</version>
         </dependency>-->
+		<dependency>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.8.3</version>
+        </dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
