--- a/pom.xml
+++ b/pom.xml
@@ -196,12 +196,6 @@
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.3.RELEASE</version>
         </dependency>-->
-		<dependency>
-          <groupId>org.jacoco</groupId>
-          <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.3</version>
-        </dependency>
-
 	</dependencies>
 
 	<dependencyManagement>
@@ -295,38 +289,22 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.7.9</version>
-                <executions>
-                    <execution>
-                        <!-- 在maven的initialize阶段，将Jacoco的runtime agent作为VM的一个参数 传给被测程序，用于监控JVM中的调用。 -->
-                        <id>default-prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-
-
-                    <configuration>
-                        <destFile>
-                            ${project.build.directory}/coverage-reports/jacoco.exec
-                        </destFile>
-                        <propertyName>surefireArgLine</propertyName>
-                    </configuration>
-                </execution>
-
-                <execution>
-                    <id>default-report</id>
-                    <phase>test</phase>
-                    <goals>
-                        <goal>report</goal>
-                    </goals>
-
-
-                    <configuration>
-                        <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
-                        <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
+            <executions>
+        <execution>
+            <id>jacoco-initialize</id>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+        </execution>
+        <execution>
+            <id>jacoco-site</id>
+            <phase>package</phase>
+            <goals>
+                <goal>report</goal>
+            </goals>
+        </execution>
+    </executions>    
+            </plugin>
 		</plugins>
 	</build>
 </project>
